@@ -9,6 +9,8 @@
  * Add ``dulwich.porcelain._reset_file``.
    (Ded_Secer)
 
+ * Add ``Repo.unstage``. (Ded_Secer)
+
 0.20.24	2021-07-18
 
  * config: disregard UTF-8 BOM when reading file.
